got the tabbing of the languages working finally. It was an issue with codeSnippet somehow, dont ask me why. I deleted it. Took too long

--- a/frontend/src/styles/Document.module.css
+++ b/frontend/src/styles/Document.module.css
@@ -20,12 +20,15 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
+
 .queryContainerBody {
-    font-family: 'Courier New', Consolas, Monaco, 'Lucida Console', monospace;
-    font-size: 1em;
     background-color: #1d1d1d;
     color: #f1f1f1;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     padding: 5px 10px;
+}
+.queryContainerBody .code {
+    font-family: 'Courier New', Consolas, Monaco, 'Lucida Console', monospace;
+    font-size: 1.1em;
 }
